# ccxt-mcp

./: .env.example  LICENSE  README.md  pyproject.toml  run.py
src/: server.py
src/prompts/: order_management.py  testnet_guidance.py  trading_analysis.py
src/resources/: __init__.py  markets.py
src/tools/: __init__.py  cancel_order.py  create_order.py  exchange.py  fetch_balance.py  fetch_market.py  fetch_markets.py  fetch_order_book.py  fetch_ticker.py  fetch_trades.py
